--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,15 @@
 /* styles.css */
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+#background {
+    background-color: aliceblue
+}
+
 #firstSection {
     width: 100%;
     margin: 0;
@@ -15,6 +26,7 @@
 }
 
 #Welcome {
+    margin: 0;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -24,7 +36,7 @@
 #me {
     border-radius: 50%;
     max-width: 30%;
-    max-height: 20%;
+    max-height: 10%;
     object-fit: cover;
 }
 
@@ -48,6 +60,7 @@
 }
 
 #arrowButton {
+    padding-top: 5%;
     padding-left: 45%;
     color: PowderBlue;
     font-size: 50px;
@@ -63,6 +76,5 @@
     font-size: 60px;
     font-weight: normal;
     color: PowderBlue;
-    background: aliceblue;
 }
 
