--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,11 @@
     box-sizing: border-box;
 }
 
+a {
+    text-decoration: none;
+}
+
+
 #background {
     background-color: aliceblue
 }
@@ -57,6 +62,7 @@
     font-size: 60px;
     font-weight: normal;
     color: PowderBlue;
+    height: 350px;
 }
 
 #arrowButton {
@@ -80,16 +86,36 @@
     justify-content: space-between;
 }
 
+#ghlf {
+    background-image: url("/Images/Screenshot 2025-01-20 at 4.42.06 PM.png");
+}
+
 .linkButtons {
     width: 500px;
     height: 300px;
     border-radius: 10%;
+    position: relative;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    color: transparent;
+    font-size: 24px;
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: black;
 }
 
-#ghlf {
-    background-image: url("/Images/Screenshot 2025-01-20 at 4.42.06 PM.png");
-    background-size:cover;
+#ghlf:hover {
+    background-color: darkgray;
+    transition: all 0.9s ease;
+    background-image: none;
+    color: white;
+    transform: scale(1.1);
 }
+
+
 
 #powerGrid {
     background-image: url("/Images/powergridimg.jpeg");
