added training plan generator

--- a/styles.css
+++ b/styles.css
@@ -145,7 +145,7 @@ a {
 }
 
 #tetris {
-    background-image: url("/Images/tetris.jpeg");
+    background-image: url("Images/tetris.jpeg");
     background-size:cover;
 }
 
