fixed image issues

--- a/styles.css
+++ b/styles.css
@@ -87,7 +87,7 @@ a {
 }
 
 #ghlf {
-    background-image: url("/Images/Screenshot 2025-01-20 at 4.42.06 PM.png");
+    background-image: url("Images/Screenshot 2025-01-20 at 4.42.06 PM.png");
 }
 
 .linkButtons {
@@ -118,7 +118,7 @@ a {
 }
 
 #run {
-    background-image: url("/Images/run.png");
+    background-image: url("Images/run.png");
     background-size: contain;
     background-color: white;
 }
